--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
+    "@vercel/analytics": "^1.2.2",
     "geist": "^1.2.2",
     "gsap": "^3.12.5",
     "next": "14.1.0",
